--- a/package.json
+++ b/package.json
@@ -12,8 +12,17 @@
     "worker:prod": "tsx src/worker.ts"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^3.0.47",
+    "@ai-sdk/google": "^3.0.31",
+    "@ai-sdk/openai": "^3.0.34",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@libsql/client": "^0.17.0",
     "@paralleldrive/cuid2": "^3.3.0",
+    "@tanstack/react-table": "^8.21.3",
+    "ai": "^6.0.100",
+    "apify-client": "^2.22.2",
     "better-auth": "^1.4.19",
     "bullmq": "^5.70.1",
     "class-variance-authority": "^0.7.1",
