--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,11 @@
 version: "3.9"
 
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+# LOCAL DEVELOPMENT — docker compose up
+# Copy .env.production.example → .env.production
+# before running: docker compose up --build
+# ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
+
 services:
   redis:
     image: redis:7-alpine
@@ -18,6 +24,8 @@ services:
       - redis
     ports:
       - "3000:3000"
+    volumes:
+      - ./data:/data
     restart: unless-stopped
 
   worker:
@@ -29,6 +37,8 @@ services:
       - REDIS_URL=redis://redis:6379
     depends_on:
       - redis
+    volumes:
+      - ./data:/data
     restart: unless-stopped
 
 volumes:
