refactor(whatsapp): simplify whatsapp integration and remove dashboard settings
- src/app/(dashboard)/settings/whatsapp: removed manual instance management UI from settings dashboard
- src/lib/actions/whatsapp.ts, src/db/schema/whatsapp-instances.ts: removed unused api components and schema tables for whatsapp
- src/db/schema/index.ts: removed whatsapp_instances export
- src/lib/enrichment/whatsapp-check.ts: refactored to use a fixed global instance variable (EVOLUTION_GLOBAL_INSTANCE) rather than requiring individual client connections
- deploy/docker-stack.yml & .env.production.example: updated environment var templates to include EVOLUTION_GLOBAL_INSTANCE
- src/lib/evolution-api.ts: removed irrelevant instance lifecycle methods, keeping only business profile checks

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ APIFY_TOKEN=
 # WhatsApp (Evolution API)
 EVOLUTION_API_URL=
 EVOLUTION_API_KEY=
+EVOLUTION_GLOBAL_INSTANCE=
 
 # AI Models (at least one required)
 ANTHROPIC_API_KEY=
