--- a/.env.production.example
+++ b/.env.production.example
@@ -27,6 +27,7 @@ REDIS_URL=redis://redis:6379
 # Evolution API (WhatsApp)
 EVOLUTION_API_URL=http://localhost:8080
 EVOLUTION_API_KEY=
+EVOLUTION_GLOBAL_INSTANCE=
 
 # Apify (Google Maps + Instagram scraping)
 APIFY_TOKEN=
