--- a/deploy/docker-stack.yml
+++ b/deploy/docker-stack.yml
@@ -19,8 +19,9 @@ services:
       - BETTER_AUTH_URL=https://TROCAR_AQUI.com
       - NEXT_PUBLIC_APP_URL=https://TROCAR_AQUI.com
       - APIFY_TOKEN=TROCAR_AQUI
-      - EVOLUTION_API_URL=http://TROCAR_AQUI:8080
+      - EVOLUTION_API_URL=http://SEU_IP_AQUI:8080
       - EVOLUTION_API_KEY=TROCAR_AQUI
+      - EVOLUTION_GLOBAL_INSTANCE=NomeDaInstanciaNaEvo
       - ANTHROPIC_API_KEY=TROCAR_AQUI
       - OPENAI_API_KEY=
       - GOOGLE_GENERATIVE_AI_API_KEY=
@@ -52,8 +53,9 @@ services:
       - TURSO_CONNECTION_URL=file:/data/prospectai.db
       - REDIS_URL=redis://redis:6379
       - APIFY_TOKEN=TROCAR_AQUI
-      - EVOLUTION_API_URL=http://TROCAR_AQUI:8080
+      - EVOLUTION_API_URL=http://SEU_IP_AQUI:8080
       - EVOLUTION_API_KEY=TROCAR_AQUI
+      - EVOLUTION_GLOBAL_INSTANCE=NomeDaInstanciaNaEvo
       - ANTHROPIC_API_KEY=TROCAR_AQUI
       - OPENAI_API_KEY=
       - GOOGLE_GENERATIVE_AI_API_KEY=
